--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "date-fns": "^3.6.0",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-calendar": "^4.8.0",
