--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
+    "jose": "^5.2.4",
+    "nanoid": "^5.0.7",
     "next": "^14.2.1",
     "react": "18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
